Stop using deprecated new Integer(i), use Integer.valueOf()