@@ -74,7 +74,7 @@ public class SudokuBoard_getRowTest {
 
         for(int i : args) {
             assertTrue(row.contains(i));
-            localPossibilities.remove(new Integer(i));
+            localPossibilities.remove(Integer.valueOf(i));
 
         }
 
